--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import url("https://fonts.googleapis.com/css2?family=Krona+One&display=swap");
 
 @layer base {
   *,
@@ -33,18 +32,11 @@
     margin: 0;
     color: var(--color-text);
     background-color: var(--color-bg);
-    font-family: serif;
-    font-family: "Krona One", sans-serif;
-    font-weight: 400;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
     width: 100%;
     overflow-x: hidden;
   }
 
   canvas {
-    background: #141e30; /* fallback for old browsers */
-    background: linear-gradient(to right, #10141a, rgb(27, 37, 47));
     /* opacity: 0; */
   }
 
@@ -87,13 +79,14 @@
   .dom-element {
     width: 100%;
     height: 100%;
-    font-size: 10vw;
-    /* background-color: #000; */
-    background: transparent;
+    font-size: clamp(100px, 17vw, 200px);
+    background-color: #000;
+    /* background: transparent; */
     display: flex;
     color: white;
     align-items: center;
-    padding-left: 6vw;
-    line-height: 1;
+    padding-left: 3vw;
+    line-height: 0.8;
+    font-weight: 700;
   }
 }
